src/main/default/objects/Invoice__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Office)</relationshipLabel>
    <relationshipName>OfficeInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>