src/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Status record must have a record type of Invoice.</errorMessage>
        <filterItems>
            <field>Status__c.SObject__c</field>
            <operation>equals</operation>
            <value>Invoice__c</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>