src/main/default/objects/Invoice__c/fields/Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits__c</fullName>
    <label>Total Credits</label>
    <summarizedField>Credit_Memo_Applied__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_Memo_Applied__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>