src/main/default/objects/Invoice__c/fields/Total_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice__c</fullName>
    <label>Total Invoice</label>
    <summarizedField>Invoice_Item__c.Extended_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>